@@ -16,6 +16,7 @@ v.0.5dev (ongoing development)
  + LCDd: config options TitleSpeed= and Heartbeat=
  * overhauled CwLnx driver (Dave Platt)
  * overhauled picolcd driver (Nicu Pavel)
+ + add ServerScreen=blank option value
 
 v.0.5.2
  * fix switching on/off the Load screen in lcdproc client using the menu
